[gd_scene load_steps=15 format=3 uid="uid://dc0qlq7nrdkrw"]

[ext_resource type="Script" path="res://scripts/menu_principal.gd" id="1_8amuq"]
[ext_resource type="Texture2D" uid="uid://btr51tmnr5ix4" path="res://assets/Tiny Swords/Tiny Swords (Update 010)/UI/Buttons/Button_Blue_9Slides_Pressed.png" id="2_1ls44"]
[ext_resource type="FontFile" uid="uid://cmfqd0gy2i7gx" path="res://assets/medieval_sharp/MedievalSharp-Bold.ttf" id="2_hsgyu"]
[ext_resource type="Texture2D" uid="uid://daki3avef6awp" path="res://assets/Tiny Swords/Tiny Swords (Update 010)/UI/Buttons/Button_Disable_3Slides.png" id="3_2sfel"]
[ext_resource type="Texture2D" uid="uid://qp4omc1gka6v" path="res://assets/Tiny Swords/Tiny Swords (Update 010)/UI/Buttons/Button_Red_3Slides_Pressed.png" id="3_col4c"]
[ext_resource type="Texture2D" uid="uid://s8ljq54hs3o2" path="res://assets/Tiny Swords/Tiny Swords (Update 010)/UI/Buttons/Button_Blue_Pressed.png" id="6_kwmyj"]
[ext_resource type="AudioStream" uid="uid://qf4nxaluh6sm" path="res://music/milton-milton-122.mp3" id="7_lfviv"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8kvb8"]
texture = ExtResource("2_1ls44")
texture_margin_right = 1.0
expand_margin_left = 35.0
expand_margin_top = 20.0
expand_margin_right = 35.0
expand_margin_bottom = 35.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_eo7ul"]
texture = ExtResource("3_col4c")
expand_margin_bottom = 11.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uvy1t"]
texture = ExtResource("3_2sfel")
expand_margin_bottom = 11.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0hbk7"]
texture = ExtResource("3_col4c")
expand_margin_bottom = 11.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3ssld"]
texture = ExtResource("3_col4c")
expand_margin_bottom = 11.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w2b0w"]
texture = ExtResource("3_col4c")
expand_margin_bottom = 11.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vtwc5"]
texture = ExtResource("6_kwmyj")
modulate_color = Color(1, 1, 1, 0.85098)

[node name="MenuPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8amuq")

[node name="Background" type="Panel" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_8kvb8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -164.0
offset_top = -115.0
offset_right = 56.0
offset_bottom = 111.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
alignment = 1

[node name="ButtonStart" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.686275, 0.321569, 0.372549, 1)
theme_override_fonts/font = ExtResource("2_hsgyu")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_eo7ul")
theme_override_styles/normal = SubResource("StyleBoxTexture_uvy1t")
text = "START"

[node name="ButtonInfo" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.686275, 0.321569, 0.372549, 1)
theme_override_fonts/font = ExtResource("2_hsgyu")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_0hbk7")
theme_override_styles/normal = SubResource("StyleBoxTexture_uvy1t")
text = "INFO"

[node name="ButtonOptions" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.686275, 0.321569, 0.372549, 1)
theme_override_fonts/font = ExtResource("2_hsgyu")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_3ssld")
theme_override_styles/normal = SubResource("StyleBoxTexture_uvy1t")
text = "OPTIONS"

[node name="ButtonExit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.686275, 0.321569, 0.372549, 1)
theme_override_fonts/font = ExtResource("2_hsgyu")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_w2b0w")
theme_override_styles/normal = SubResource("StyleBoxTexture_uvy1t")
text = "EXIT"

[node name="Titulo" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -285.0
offset_top = 99.0
offset_right = 325.0
offset_bottom = 196.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.686275, 0.321569, 0.372549, 1)
theme_override_fonts/font = ExtResource("2_hsgyu")
theme_override_font_sizes/font_size = 80
text = "SWORD MASTER"

[node name="InfoControles" type="Panel" parent="."]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 14.0
offset_top = 160.0
offset_right = 514.0
offset_bottom = 719.0
theme_override_styles/panel = SubResource("StyleBoxTexture_vtwc5")

[node name="LabelControles" type="Label" parent="InfoControles"]
layout_mode = 0
offset_left = 107.0
offset_top = 139.0
offset_right = 424.0
offset_bottom = 376.0
theme_override_colors/font_color = Color(0.686275, 0.321569, 0.372549, 1)
theme_override_fonts/font = ExtResource("2_hsgyu")
theme_override_font_sizes/font_size = 28
text = "DIRECTION CONTROLS:
                    W
                A  S  D

    ATTACK CONTROLS:
           LEFT-CLICK  "

[node name="InfoObjetivo" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 768.0
offset_top = 165.0
offset_right = 1268.0
offset_bottom = 724.0
theme_override_styles/panel = SubResource("StyleBoxTexture_vtwc5")

[node name="LabelObjetivo" type="Label" parent="InfoObjetivo"]
offset_left = 99.0
offset_top = 169.0
offset_right = 416.0
offset_bottom = 301.0
theme_override_colors/font_color = Color(0.686275, 0.321569, 0.372549, 1)
theme_override_fonts/font = ExtResource("2_hsgyu")
theme_override_font_sizes/font_size = 28
text = "  Destroy all Structures 
                 AND 
           Kill the Boss"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_lfviv")
autoplay = true

[connection signal="pressed" from="VBoxContainer/ButtonStart" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonInfo" to="." method="_on_button_info_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonOptions" to="." method="_on_button_options_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonExit" to="." method="_on_button_exit_pressed"]
